--- a/EmployeeApp/templates/index.html
+++ b/EmployeeApp/templates/index.html
@@ -85,7 +85,7 @@
         <div class="row justify-content-center align-self-center">
             <p for="text" class="animated  fadeInDown delay-.5s"> You can run the front end locally by cloning the
                 repository from
-                <a href="https://skaarfacee.github.io/EmployeeDevUI/"> here
+                <a href="https://github.com/SkaarFacee/EmployeeDevUI"> here
                 </a>
             </p>
         </div>
